fixed z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,7 +325,6 @@ footer.main-footer {
   position: absolute;
   background-size: 120%;
   background-position: 20%;
-  z-index: 48;
   width: 100%;
   height: 100%;
   top: 0;
